Fix formatting issues in set-up-elementary and start-using-elementary guides
- Fix duplicate sidebarTitle in set-up-elementary.mdx
- Rename .md checklist files to avoid conflicts with .mdx files
- Update download links in .mdx files to point to renamed checklist files
- Remove guides from docs.json navigation (they shouldn't be indexed)

--- a/docs/cloud/guides/set-up-elementary.mdx
+++ b/docs/cloud/guides/set-up-elementary.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Set up Elementary"
-sidebarTitle: "Set up Elementary"
+sidebarTitle: "Set up"
 ---
 
 Building reliable, trustworthy data pipelines shouldn't be painful. Elementary gives you a clear, fast path to understanding your data, monitoring its health, and responding before problems impact your business.
@@ -25,7 +25,7 @@ Let's get you set up.
 ## Technical Setup
 
 <Check>
-Here's a link to a checkbox version of this guide that you can download and use to track your progress: [Download as markdown](/cloud/guides/set-up-elementary.md).
+Here's a link to a checkbox version of this guide that you can download and use to track your progress: [Download as markdown](/cloud/guides/set-up-elementary-checklist.md).
 </Check>
 
 ### Setup and integrations
