--- a/docs/cloud/guides/set-up-elementary.mdx
+++ b/docs/cloud/guides/set-up-elementary.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Set up Elementary"
-sidebarTitle: "Set up"
+sidebarTitle: "Technical Setup"
 ---
 
 Building reliable, trustworthy data pipelines shouldn't be painful. Elementary gives you a clear, fast path to understanding your data, monitoring its health, and responding before problems impact your business.
