--- a/docs/cloud/features/collaboration-and-communication/audit_logs/overview.mdx
+++ b/docs/cloud/features/collaboration-and-communication/audit_logs/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: Logs
-sidebarTitle: Logs
+sidebarTitle: Overview
 ---
 
 The **Logs** feature allows workspace admins to track and export both user actions and system-level events across the platform. This includes user configuration changes, data synchronization events, and alert deliveries.
