datadog log streaming

--- a/docs/cloud/features/collaboration-and-communication/audit_logs/overview.mdx
+++ b/docs/cloud/features/collaboration-and-communication/audit_logs/overview.mdx
@@ -34,3 +34,13 @@ Once enabled for your account, access the logs:
 6. Click **Export** to download the log as a **CSV file**
 
 You can open the CSV in any spreadsheet tool to review and filter the activity as needed.
+
+## Stream Logs to External Services
+
+In addition to exporting logs as CSV files, you can stream logs in real-time to external log management services for centralized monitoring and analysis.
+
+### Available Integrations
+
+- **[Datadog](/cloud/integrations/log-streaming/datadog)** - Stream logs to Datadog for centralized log management, monitoring, and alerting
+
+Configure log streaming from the Logs page by clicking **Configure Log Streaming** or the **Settings** icon, then select your preferred destination.
