--- a/docs/python-sdk/guides/sending-data.mdx
+++ b/docs/python-sdk/guides/sending-data.mdx
@@ -34,7 +34,7 @@ asset = TableAsset(
 )
 
 # Initialize client
-PROJECT_ID = "your-project-id"
+PROJECT_ID = "my-python-project"  # Your Python project identifier (used to deduplicate and identify assets)
 API_KEY = "your-api-key"
 URL = "https://app.elementary-data.com/sdk-ingest/{env_id}/batch"
 
@@ -82,7 +82,7 @@ asset = TableAsset(
 )
 
 # Initialize client
-PROJECT_ID = "your-project-id"
+PROJECT_ID = "my-python-project"  # Your Python project identifier (used to deduplicate and identify assets)
 API_KEY = "your-api-key"
 URL = "https://app.elementary-data.com/sdk-ingest/{env_id}/batch"
 
