--- a/docs/python-sdk/installation.mdx
+++ b/docs/python-sdk/installation.mdx
@@ -35,7 +35,7 @@ print(elementary_python_sdk.__version__)
 
 To use the Python SDK, you'll need:
 
-1. **Project ID** - Your Elementary Cloud project identifier
+1. **Project ID** - Your Python project identifier (choose any string to identify your code project; used to deduplicate and identify reported assets)
 2. **API Key** - Your Elementary Cloud API token
 3. **URL** - The full endpoint URL: `{base_url}/sdk-ingest/{env_id}/batch`
    - Example: `https://app.elementary-data.com/sdk-ingest/a6b2425d-36e2-4e13-8458-9825688ca1f2/batch`
