Add Slack community link to quickstart support step

--- a/docs/oss/quickstart/quickstart-support.mdx
+++ b/docs/oss/quickstart/quickstart-support.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Get support"
 icon: "square-7"
 ---
 
-**Join our Slack community to get support, stay updated, and connect with other Elementary users.**
+**Join our [Slack community](https://elementary-community.slack.com/ssb/redirect) to get support, stay updated, and connect with other Elementary users.**
 
 Our Slack community is a great place to:
 - Stay updated on releases
@@ -16,6 +16,6 @@ Our Slack community is a great place to:
 
 Want to make a contribution for an integration you're missing or any new feature or fix? We appreciate it!
 
-- Reach out in Slack or email us at support@elementary-data.com
+- Reach out in [Slack](https://elementary-community.slack.com/ssb/redirect) or email us at support@elementary-data.com
 - Learn more about contributing [here](/oss/general/contributions)
 
