Update video title to 'Step-by-step: How to install the Elementary dbt package?' and remove 'Step-by-step:' from section below

--- a/docs/snippets/quickstart-package-install.mdx
+++ b/docs/snippets/quickstart-package-install.mdx
@@ -8,7 +8,7 @@ Some packages we recommend you check out: [dbt_utils](https://github.com/dbt-lab
 
 </Accordion>
 
-## Video: How to install Elementary dbt package?
+## Step-by-step: How to install the Elementary dbt package?
 
 <Frame>
   <div style={{ paddingBottom: "64.98194945848375%" }}>
@@ -29,7 +29,7 @@ Some packages we recommend you check out: [dbt_utils](https://github.com/dbt-lab
   </div>
 </Frame>
 
-## Step-by-step: Install Elementary dbt package
+## Install Elementary dbt package
 
 <Steps>
   <Step title="Add elementary to `packages.yml`">
