--- a/docs/cloud/features/collaboration-and-communication/audit_logs/overview.mdx
+++ b/docs/cloud/features/collaboration-and-communication/audit_logs/overview.mdx
@@ -37,10 +37,11 @@ You can open the CSV in any spreadsheet tool to review and filter the activity a
 
 ## Stream Logs to External Services
 
-In addition to exporting logs as CSV files, you can stream logs in real-time to external log management services for centralized monitoring and analysis.
+In addition to exporting logs as CSV files, you can stream logs in real-time to external log management services for centralized monitoring, analysis, and long-term storage.
 
 ### Available Integrations
 
 - **[Datadog](/cloud/integrations/log-streaming/datadog)** - Stream logs to Datadog for centralized log management, monitoring, and alerting
+- **[Google Cloud Storage (GCS)](/cloud/integrations/log-streaming/gcs)** - Stream logs to GCS buckets for long-term storage and integration with BigQuery and other Google Cloud services
 
 Configure log streaming from the Logs page by clicking **Configure Log Streaming** or the **Settings** icon, then select your preferred destination.
