--- a/docs/cloud/general/security-and-privacy.mdx
+++ b/docs/cloud/general/security-and-privacy.mdx
@@ -82,6 +82,21 @@ For more information, see our [Data Protection Agreement](https://www.elementary
 
 Contact us at `legal@elementary-data.com` if you need us to review and sign your company's DPA and MNDA.
 
+## Samples storage in the US
+
+As mentioned above, Elementary generally avoids storing raw data and relies on high level metrics and metadata. 
+That being said, one feature (that is opt-out) that may contain such data is storage of sample rows for failed tests in your pipeline.
+
+For customers that require it, Elementary has the option to store such information in the US, instead of the EU which is the default. 
+In this case, the data will specifically be stored in S3 buckets in the eu-east-1 (Virginia) AWS region, instead of eu-central-1 (Frankfurt).
+
+The relevant datasets that will be stored in the US are:
+1. The S3 bucket that contains the samples served by the Elementary UI.
+2. The S3 bucket used for AI chat history - as these may potentially interact with sample data.
+3. Intermediate S3 buckets used for Elementary's internal data pipeline, that may temporarily store samples.
+
+This mechanism ensures, if enabled, that sample data and related datasets will never be persisted outside of the US, permanently or temporarily.
+
 ## Have more questions?
 
 We would be happy to answer!
