--- a/docs/cloud/integrations/alerts/jira.mdx
+++ b/docs/cloud/integrations/alerts/jira.mdx
@@ -21,13 +21,15 @@ Elementary's Jira integration enables creating Jira issues from incidents.
 <img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1739794589/choose_jira_project_ukaxfq.png" />
 
 ## Creating Jira issues from incidents
-When an incident is created, you can create a Jira issue from the incident page by simply clicking on "Create Jira Ticket".
-The ticket will automatically be created in Jira, in the team you chose upon connecting Jira.
+When an incident is created, you can generate a Jira issue directly from the incident page by clicking **Create Jira Ticket**. This opens a pre-filled form where you can review, update, or add additional fields before submitting. Once created, the issue is automatically added to the Jira team you selected when connecting Jira.
 
-After the ticket is created you can see the Jira issue link in the incident page.
-The ticket will also contain a link to the incident in Elementary.
+After the ticket is created, a link to the Jira issue appears on the incident page. The Jira ticket itself also includes a link back to the incident in Elementary for easy cross-referencing.
 
-<Note>Note: Elementary will not update the ticket in Jira when the incident is resolved or changed in any way</Note>
+<Note> If you connected the app before December 2025, you’ll need to re-authenticate the Jira app to change the **Reporter** or **Assignee** fields. You can do this by clicking the re-authentication link in the ticket form, or by going to your environment page and re-authenticating the app for the relevant environment.</Note>
+
+<Tip> Elementary will not update the ticket in Jira when the incident is resolved or changed</Tip>
+
+<img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1768125455/incident-jira_idelv3.png" />
 
 <img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1739794590/jira_ticket_l6wknb.png" />
 
